# agent-manager

./: .gitignore  AUDIT_REPORT.md  README.md  bing_cookies.json  google_cookies.json  google_search_tool.md  phases.md  pyproject.toml  requirements.md  search.html
.agent_manager/: state.sqlite3
.agent_manager/state/: 02dfb5f701bc4cc08ac03322e7e16cfb-7569009c3764.json  0deaabca548b42f3b3e10f1e189e671e-c250d4fd6306.json  b9f89acdedc5436c982a469a8ed0d860-00f9ee4acfba.json  db08ab23c24a4e63909305cfc811da5d-2c4d9e8e3e5a.json
.tmp_tests/01d1e41e39374a5b8ca685c976141c2e/: checkpoints.sqlite3-journal
.tmp_tests/033d9a233062444aaf220384aceea99c/: runtime.toml
.tmp_tests/083b4139a9fa4ba19c0f714bc60d2cda/: checkpoints.sqlite3-journal
.tmp_tests/0ace2d942ef44d70af216fa096031c26/: checkpoints.sqlite3-journal
.tmp_tests/0c1c1253fbdb4baa935479bb3b6a8563/: checkpoints.sqlite3-journal
.tmp_tests/0d3bb44d713a4b86959949d13b6059ed/: ac0bf3264f8c476a9d4e1615485f9f8d-cff047e11ed0.json  checkpoints.sqlite3-journal
.tmp_tests/0d603ca852e342928c85858eca04435f/: checkpoints.sqlite3-journal
.tmp_tests/0ddb39d96f9545b29daa9231cc657263/: checkpoints.sqlite3  checkpoints.sqlite3-journal
.tmp_tests/0e585c1dd7644b849096c935bfbdd7a3/: checkpoints.sqlite3-journal
.tmp_tests/0fc8dfb109624e6581a6b434b9723312/: checkpoints.sqlite3-journal
.tmp_tests/10a8a69b33134f529b875e168fb83a93/: checkpoints.sqlite3-journal
.tmp_tests/12d5acdc337b481085fc5659bf668dbe/: checkpoints.sqlite3-journal  e1abb79ba4a44bcba1240b1f1051d43a-9f8887f4d3cc.json
.tmp_tests/133c39acda3f46a19fbada29132927da/: checkpoints.sqlite3-journal
.tmp_tests/14135c6c5de4418abc2ac23a1310e305/: checkpoints.sqlite3-journal
.tmp_tests/1cdab568c4184bb4b4ec871fa15f44a2/: 496f3ce7fb76445eab4ec4d7bdb131b0-3d8d82b1cce6.json  checkpoints.sqlite3-journal
.tmp_tests/1e86a65d27ef43d9a62fba9eb0be25e5/: checkpoints.sqlite3-journal
agent_manager/: __init__.py  async_utils.py  config.py  errors.py  observability.py  types.py
agent_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: README.md  advanced-two-agent-coding.md  config-tool.md  configuration.md  context-manager.md  get_started.md  provider-configurations.md  providers-and-connectivity.md  tools-retrieval.md  tools-tinydb.md  tools-web-search.md  tools-your-own.md  tools.md
tests/: test_config_tool.py  test_context.py  test_phase5_new.py  test_plugins.py  test_providers.py  test_requirements_completion.py  test_smoke.py  test_tool_test_cli.py  test_tools.py  test_web_search.py
(+238 files in other folders)
