[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-manager"
version = "0.1.0"
description = "Local-first, provider-agnostic Python agent runtime foundation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "Theunis van Niekerk" }
]
keywords = ["agents", "llm", "runtime", "orchestrator", "tools"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
openai = ["openai"]
anthropic = ["anthropic"]
local-providers = ["httpx"]
yaml = ["pyyaml>=6.0"]
retrieval = ["numpy"]
chroma = ["chromadb"]
faiss = ["faiss-cpu", "numpy"]
pgvector = ["psycopg2-binary"]
embeddings = ["sentence-transformers"]
mcp = ["mcp"]
langchain = ["langchain-core"]
llamaindex = ["llama-index-core"]
tinydb = ["tinydb"]
dev = ["pytest", "pytest-asyncio", "ruff"]
all = [
  "openai",
  "anthropic",
  "httpx",
  "pyyaml>=6.0",
  "chromadb",
  "faiss-cpu",
  "numpy",
  "psycopg2-binary",
  "sentence-transformers",
  "mcp",
  "langchain-core",
  "llama-index-core",
  "tinydb",
]

[project.scripts]
agent-manager = "agent_manager.cli.main:main"

[tool.setuptools.packages.find]
include = ["agent_manager*"]
